--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^9.4.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
