--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/noru/my-react-boilerplate#readme",
   "dependencies": {
+    "antd": "^3.11.6",
+    "bulma": "^0.7.2",
     "classname": "0.0.0",
+    "font-awesome": "^4.7.0",
     "lodash-es": "^4.17.11",
     "noru-utils": "^0.1.33",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-fontawesome": "^1.6.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
@@ -34,6 +38,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -42,16 +47,21 @@
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
+    "raw-loader": "^1.0.0",
     "react-hot-loader": "^4.6.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
